change ul to comment in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					  <hr>
 					<h2>Ma liste</h2>
 					<ul>
-					    <li>Youhou!</li>
+					   <!-- <li>Youhou!</li> -->
 					</ul>
 				</section>	
 				<script src="main.js"></script>
