add paragraphe in footer

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		
 		</head>
 			<body class="wrapper">
-				<!-- <header>
-				</header> -->
+				<header>
+				</header>
 				
 				<section class="contenair">
 				    <h1>To-Do-List</h1>
@@ -24,8 +24,9 @@
 					</ul>
 				</section>	
 				<script src="main.js"></script>
-				<!-- <footer>
-				</footer> -->
+				<footer>
+				<p>Designed by : PARENT <a href="https://www.francoisdparent.site/blog/">François</a> for an trainning. Assembled in French.</p>
+				</footer>
 			</body>
 	</html>
 
