--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 	<html lang="fr">
 		<head>
 			<meta charset="UTF-8">
-			<link rel="stylesheet" href="style.css">
+			<link rel="stylesheet" href="css/style.css">
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		
 		</head>
 			<body class="wrapper">
 				<header>
-					<button id="darkMode" class="darkmode">Dark-Mode</button>
+
 				</header>
 				
 				<section class="contenair">
@@ -24,9 +24,9 @@
 					   <!-- <li>Youhou!</li> -->
 					</ul>
 				</section>	
-				<script src="main.js"></script>
+				<script src="js/main.js"></script>
 				<footer>
-				<p>Designed by : PARENT <a href="https://www.francoisdparent.site/blog/">François</a> for an trainning. Assembled in French.</p>
+				<p><b>Designed by : PARENT <a href="https://www.francoisdparent.site/blog/">François</a> for an trainning. Assembled in French.</b></p>
 				</footer>
 			</body>
 	</html>
