--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<html lang="fr">
 		<head>
 			<meta charset="UTF-8">
+			<link rel="shortcut icon" href="images/favicon.ico">
 			<link rel="stylesheet" href="css/style.css">
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		
